--- a/app/src/main/res/layout/demo1.xml
+++ b/app/src/main/res/layout/demo1.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#00A8FF">
 
-    <com.vart.varttabstrip.VartSlideStripView
+    <com.vart.tabstrip.VartSlideStripView
         android:id="@+id/ssv1"
         android:layout_width="match_parent"
         android:layout_height="35dp"
@@ -55,7 +55,7 @@
             android:textSize="16sp"
             android:layout_marginStart="10dp"/>
 
-    </com.vart.varttabstrip.VartSlideStripView>
+    </com.vart.tabstrip.VartSlideStripView>
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
