优化了算法

--- a/tabstrip/src/main/res/values/attrs.xml
+++ b/tabstrip/src/main/res/values/attrs.xml
@@ -12,6 +12,7 @@
         <attr name="commonTextSize" format="dimension" />
         <attr name="maxTextSize" format="dimension" />
         <attr name="stripWidthRatio" format="float" />
+        <attr name="stripWidthEqualText" format="boolean" />
         <attr name="alphaText" format="boolean" />
         <attr name="initAlpha" format="float" />
         <attr name="finalAlpha" format="float" />
