--- a/app/src/main/res/layout/demo1.xml
+++ b/app/src/main/res/layout/demo1.xml
@@ -19,7 +19,8 @@
         tabStrip:stripWidthRatio="0.5"
         tabStrip:alphaText="true"
         tabStrip:initAlpha="0.6"
-        tabStrip:finalAlpha="1.0">
+        tabStrip:finalAlpha="1.0"
+        tabStrip:stripWidthEqualText="true">
 
         <TextView
             android:layout_width="50dp"
@@ -30,18 +31,18 @@
             android:textSize="16sp"
             android:layout_marginStart="28dp"/>
         <TextView
-            android:layout_width="50dp"
+            android:layout_width="100dp"
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="支持"
+            android:text="支持支持"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:layout_marginStart="10dp" />
         <TextView
-            android:layout_width="50dp"
+            android:layout_width="75dp"
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="推荐"
+            android:text="推荐啊"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:layout_marginStart="10dp"/>
