--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -6,4 +6,8 @@
         android:id="@+id/button1" android:text="demo1" />
     <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:id="@+id/button2" android:text="demo2" />
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:id="@+id/button3" android:text="demo3" />
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:id="@+id/button4" android:text="demo4" />
 </LinearLayout>
