add bold text feature

--- a/app/src/main/res/layout/demo1.xml
+++ b/app/src/main/res/layout/demo1.xml
@@ -21,6 +21,7 @@
         tabStrip:initAlpha="0.6"
         tabStrip:finalAlpha="1.0"
         tabStrip:stripWidthEqualText="true"
+        tabStrip:boldText="true"
         >
 
         <TextView
